--- a/src/components/burger-ingredients/burger-ingredients.module.css
+++ b/src/components/burger-ingredients/burger-ingredients.module.css
@@ -53,35 +53,6 @@
   border: 0;
 }
 
-.window__image {
-  width: 480px;
-  height: 240px;
-  object-fit: contain;
-}
-
-.window__text {
-  text-align: center;
-  color: var(--secondary-text);
-}
-
-.window__nutrients {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-  display: grid;
-  grid-template-columns: repeat(4, minmax(120px, 200px));
-  grid-column-gap: 20px;
-}
-
-.nutrient {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  min-height: 56px;
-}
-
 @media screen and (max-width: 1200px) {
   .tabs {
     flex-direction: column;
@@ -94,6 +65,7 @@
   }
   .list {
     max-height: 2000px;
+    padding: 0 20px;
   }
   .title {
     text-align: center;
