--- a/src/components/ingredient-details/ingredient-details.module.css
+++ b/src/components/ingredient-details/ingredient-details.module.css
@@ -31,3 +31,19 @@
   justify-content: space-between;
   min-height: 56px;
 }
+
+.details {
+  display: flex;
+  min-height: 64px;
+  align-items: center;
+  justify-content: flex-start;
+  width: 100%;
+}
+
+@media screen and (max-width: 480px) {
+  .image {
+    width: 280px;
+    height: 240px;
+    object-fit: contain;
+  }
+}
