--- a/src/components/modal-overlay/modal-overlay.module.css
+++ b/src/components/modal-overlay/modal-overlay.module.css
@@ -10,7 +10,7 @@
   right: 0;
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.6);
-  justify-content: center;
-  align-items: center;
+  /*justify-content: center;
+  align-items: center;*/
   z-index: 1;
 }
