--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -5,11 +5,11 @@
   box-sizing: border-box;
   width: 100%;
   max-width: 720px;
-  min-height: 530px;
+  min-height: 538px;
   background-color: var(--modal-bg);
   color: var(--text-color);
   border-radius: 40px;
-  position: relative;
+  position: fixed;
   z-index: 5;
 }
 
@@ -19,14 +19,30 @@
   padding: 0;
   border: 0;
   position: absolute;
-  top: 60px;
-  right: 40px;
+  top: 20px;
+  right: 0;
   cursor: pointer;
+}
+
+.container {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
 }
 
 @media screen and (max-width: 790px) {
   .modal {
     max-width: 420px;
     min-height: 480px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .modal {
+    max-width: 280px;
+    min-height: 450px;
+    padding: 16px;
   }
 }
