--- a/src/components/ingredient-details/ingredient-details.module.css
+++ b/src/components/ingredient-details/ingredient-details.module.css
@@ -21,6 +21,7 @@
   display: grid;
   grid-template-columns: repeat(4, minmax(120px, 200px));
   grid-column-gap: 20px;
+  box-sizing: border-box;
 }
 
 .nutrient {
@@ -38,12 +39,24 @@
   align-items: center;
   justify-content: flex-start;
   width: 100%;
+  box-sizing: border-box;
+}
+
+@media screen and (max-width: 790px) {
+  .nutrients {
+    grid-template-columns: repeat(4, minmax(60px, 110px));
+  }
 }
 
 @media screen and (max-width: 480px) {
+  .text {
+    font-size: 13px;
+  }
+  .nutrients {
+    grid-template-columns: repeat(4, minmax(20px, 40px));
+  }
   .image {
     width: 280px;
     height: 240px;
-    object-fit: contain;
   }
 }
