--- a/src/components/burger-constructor/burger-constructor.module.css
+++ b/src/components/burger-constructor/burger-constructor.module.css
@@ -1,3 +1,9 @@
+.container {
+  flex-direction: column;
+  justify-content: flex-start;
+  box-sizing: border-box;
+}
+
 .constructor__item {
   box-sizing: border-box;
   display: flex;
@@ -9,6 +15,36 @@
 .stuffings__item {
   composes: constructor__item;
 }
+
+.list {
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-end;
+  box-sizing: border-box;
+  list-style-type: none;
+}
+
+.list_notdisplayed {
+  display: none;
+}
+
+.list_displayed {
+  position: absolute;
+  top: 0;
+  z-index: 3;
+  background-color: black;
+  display: flex;
+  width: 100%;
+  margin: 0;
+  padding: 0 0 60px 0;
+}
+
+.list_flex {
+  display: flex;
+  margin: 100px 0 0 0;
+  padding: 0;
+}
+
 
 .stuffings {
   list-style-type: none;
@@ -40,16 +76,7 @@
   outline: 0;
 }
 
-.list {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-end;
-  box-sizing: border-box;
-  margin: 100px 0 0 0;
-  padding: 0;
-  list-style-type: none;
-}
+
 
 .constructorElement {
   max-width: 300px;
@@ -89,6 +116,7 @@
   box-sizing: border-box;
   align-items: center;
   padding: 0 8px;
+  min-height: 80px;
 }
 
 .constructor__button {
@@ -127,7 +155,7 @@
     justify-content: flex-start;
     margin: 0 0 16px 0;
   }
-  .list {
+  .list_flex {
     margin: 40px 0 0 0;
     padding: 0 16px;
   }
