--- a/src/components/total-sum/total-sum.module.css
+++ b/src/components/total-sum/total-sum.module.css
@@ -16,6 +16,7 @@
 @media screen and (max-width: 790px) {
   .container {
     position: fixed;
+    width: 100%;
     background-color: var(--modal-bg);
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
@@ -24,5 +25,6 @@
     padding: 16px 8px;
     visibility: visible;
     z-index: 4;
+    
   }
 }
