2806 исправлены основные замечания + улучшена моб. версия

--- a/src/components/burger-ingredients/burger-ingredients.module.css
+++ b/src/components/burger-ingredients/burger-ingredients.module.css
@@ -30,7 +30,9 @@
 .tabs {
   display: flex;
   justify-content: center;
-  flex-direction: row;
+  /*flex-direction: row;*/
+
+  justify-content: space-between;
 }
 
 .ingredients {
@@ -53,16 +55,7 @@
   border: 0;
 }
 
-@media screen and (max-width: 1200px) {
-  .tabs {
-    flex-direction: column;
-  }
-}
-
 @media screen and (max-width: 790px) {
-  .tabs {
-    flex-direction: column;
-  }
   .list {
     max-height: 2000px;
     padding: 0 20px;
