--- a/src/components/meal-list/meal-list.module.css
+++ b/src/components/meal-list/meal-list.module.css
@@ -80,6 +80,7 @@
 @media screen and (max-width: 790px) {
   .list {
     grid-template-columns: repeat(2, minmax(200px, 380px));
+    padding: 0 0 60px 0;
   }
 }
 
