--- a/src/components/total-sum/total-sum.module.css
+++ b/src/components/total-sum/total-sum.module.css
@@ -13,6 +13,16 @@
   max-width: 200px;
 }
 
+@media screen and (max-width: 1150px) {
+  .container {
+    margin: 20px 0 0 0;
+  }
+
+  .sum {
+    margin: 0 16px 0 0;
+  }
+}
+
 @media screen and (max-width: 790px) {
   .container {
     position: fixed;
