--- a/src/components/constructor-list/constructor-list.module.css
+++ b/src/components/constructor-list/constructor-list.module.css
@@ -11,7 +11,7 @@
   display: flex;
   margin: 100px 0 0 0;
   padding: 0;
-  min-height: 90vh;
+  /*min-height: 80vh;*/
 }
 
 .stuffings__item {
@@ -81,17 +81,22 @@
   }
 }
 
+@media screen and (max-width: 960px) {
+  .stuffings {
+    max-height: 2000px;
+  }
+}
+
 @media screen and (max-width: 790px) {
   .stuffings {
     align-items: flex-start;
     justify-content: flex-start;
-    max-height: 2000px;
     padding: 0;
   }
 
   .item_type_bun {
     width: 100%;
-    padding: 0 0 0 40px;
+    padding: 0 0 0 32px;
     margin: 0;
   }
 
@@ -106,7 +111,7 @@
   }
 
   .list {
-    padding: 0 0 0 8px;
+    padding: 0;
     margin: 0;
   }
 }
