--- a/src/index.css
+++ b/src/index.css
@@ -65,6 +65,12 @@
   .constructor-element_pos_top {
     margin: 0 0 20px 0 !important;
   }
+
+  .text_type_digits-medium{
+    font-size: 38px!important;
+  }
+
+  
 }
 
 @media screen and (max-width: 790px) {
@@ -104,4 +110,9 @@
     max-width: 230px;
     padding: 16px 16px !important;
   }
+
+  .button_button__gss3G {
+    padding: 10px 32px!important;
+  }
+
 }
