3006 сделан редакс и DnD из ингредиентов в начинки пока

--- a/src/components/burger-constructor/burger-constructor.module.css
+++ b/src/components/burger-constructor/burger-constructor.module.css
@@ -41,6 +41,12 @@
   padding: 0;
 }
 
+.tempDropCont {
+  background-color: black;
+  width: 100%;
+  min-height: 250px;
+}
+
 .constructor__title {
   font-size: 28px;
   font-family: 'JetBrains Mono', sans-serif;
