--- a/src/components/constructor-list/constructor-list.module.css
+++ b/src/components/constructor-list/constructor-list.module.css
@@ -14,6 +14,24 @@
   /*min-height: 80vh;*/
 }
 
+.empty {
+  min-height: 5vh;
+}
+
+.stuffings__empty {
+  font-family: 'JetBrains Mono';
+ margin-right: 20%;
+  font-size: 14px;
+}
+
+.candrop__style {
+  background-color: green;
+}
+
+.cantdrop__style  {
+  background-color: purple;
+}
+
 .stuffings__item {
   box-sizing: border-box;
   display: flex;
@@ -47,7 +65,7 @@
   overflow-y: auto;
   box-sizing: border-box;
   max-height: calc(
-    (5 * 80px) + (16px * 4)
+    (5 * 70px) + (16px * 4)
   ); /*включаю скролл, когда более 5 элементов добавлено */
 }
 
