--- a/src/components/custom-constructor-element/custom-constructor-element.module.css
+++ b/src/components/custom-constructor-element/custom-constructor-element.module.css
@@ -41,6 +41,8 @@
 .icon {
   display: block;
   cursor: pointer;
+  border: 1px solid lime;
+  padding: 3px 10px;
 }
 
 @media screen and (max-width: 1310px) {
