--- a/src/components/custom-constructor-element/custom-constructor-element.module.css
+++ b/src/components/custom-constructor-element/custom-constructor-element.module.css
@@ -45,6 +45,19 @@
   padding: 3px 10px;
 }
 
+
+.delete_mobile {
+  background-color: red;
+  height: 70px;
+   display: block;
+   position: absolute; 
+   right: 0;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+}
+
 @media screen and (max-width: 1310px) {
   .constructor__item {
     width: 100%;
@@ -57,6 +70,7 @@
     padding: 0;
     margin: 0;
   }
+
 }
 
 @media screen and (max-width: 460px) {
