--- a/src/components/custom-constructor-element/custom-constructor-element.module.css
+++ b/src/components/custom-constructor-element/custom-constructor-element.module.css
@@ -3,7 +3,6 @@
   justify-content: space-between;
   width: 100%;
   align-items: center;
-  border-bottom: 1px solid grey;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -41,13 +40,12 @@
 .icon {
   display: block;
   cursor: pointer;
-  border: 1px solid lime;
   padding: 3px 10px;
 }
 
-
 .delete_mobile {
   background-color: red;
+  box-sizing: border-box;
   height: 70px;
    display: block;
    position: absolute; 
@@ -56,6 +54,14 @@
    flex-direction: column;
    justify-content: center;
    align-items: center;
+}
+
+.delete_image {
+  background-image: url('../../images/trash.svg');
+  background-size: cover;
+  width: 48px;
+  height: 48px;
+  background-color: transparent;
 }
 
 @media screen and (max-width: 1310px) {
