0407 works all, css left 2

--- a/src/components/total-sum/total-sum.module.css
+++ b/src/components/total-sum/total-sum.module.css
@@ -13,6 +13,14 @@
   max-width: 200px;
 }
 
+.button_visible {
+  display: flex;
+}
+
+.button_hidden {
+  display: none;
+}
+
 @media screen and (max-width: 1150px) {
   .container {
     margin: 20px 0 0 0;
