--- a/src/components/constructor-list/constructor-list.module.css
+++ b/src/components/constructor-list/constructor-list.module.css
@@ -12,6 +12,7 @@
   margin: 100px 0 0 0;
   padding: 0;
   /*min-height: 80vh;*/
+  background-color: #131316!important;
 }
 
 .empty {
@@ -49,7 +50,7 @@
   display: flex;
   box-sizing: border-box;
   justify-content: flex-end;
-  padding: 0 16px 0 0;
+  padding: 0 16px 0 48px;
 }
 
 .stuffings {
@@ -86,7 +87,6 @@
   justify-content: flex-start;
   width: 100%;
   box-sizing: border-box;
-  border: 2px solid lightblue;
 }
 
 @media screen and (max-width: 1250px) {
@@ -96,11 +96,26 @@
   .stuffings {
     padding: 0 0 0 20px;
   }
+
+  
+}
+
+@media screen and (max-width: 1150px) {
+
+  .stuffings {
+    margin: 0;
+  }
+
+
 }
 
 @media screen and (max-width: 960px) {
   .stuffings {
     max-height: 2000px;
+  }
+  .stuffings__empty {
+    margin-right: 0;
+    margin-left: 5%;
   }
 }
 
