--- a/src/components/custom-constructor-element/custom-constructor-element.module.css
+++ b/src/components/custom-constructor-element/custom-constructor-element.module.css
@@ -45,14 +45,15 @@
 
 .delete_mobile {
   box-sizing: border-box;
-  height: 70px;
-   display: block;
+  height: auto;
+  background-color: red;
    position: absolute; 
    right: 0;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
+   padding: 17px 0;
 }
 
 .delete_image {
@@ -60,7 +61,17 @@
   background-size: cover;
   width: 35px;
   height: 35px;
-  background-color: transparent;
+  background-color: transparent;  
+
+}
+
+
+.stuffings__item {
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  justify-content: flex-start;
 }
 
 @media screen and (max-width: 1310px) {
