--- a/src/components/ingredient/ingredient.module.css
+++ b/src/components/ingredient/ingredient.module.css
@@ -6,6 +6,7 @@
 }
 .item__mobilebutton {
   background-color: transparent;
+  margin: 18px 0 0 0;
   border: 0;
   font-size: 14px;
   line-height: 20px;
