--- a/src/components/app-header/app-header.module.css
+++ b/src/components/app-header/app-header.module.css
@@ -33,11 +33,30 @@
   line-height: 24px;
   background-color: transparent;
   border: 0;
-  color: var(--text-color);
+  color: var(--secondary-text);
   cursor: pointer;
-  padding: 12px 0;
+ /* padding: 12px 0 12px 32px;*/
+ padding: 12px 0;
   position: relative;
   text-decoration: none;
+  background-size: 24px 22px;
+  background-repeat: no-repeat;
+  background-position: top 12px left 0px;
+  min-width: 150px;
+}
+
+.menu__item_active {
+  color: var(--text-color);
+}
+
+.menu__item_unactive {  color: var(--secondary-text);}
+
+.icon__ {  
+  background-image: url('../../images/burger-icon.svg');
+}
+
+.menu__item_type_burger {  
+  background-image: url('../../images/burger-icon.svg');
 }
 
 .logo {
@@ -79,16 +98,19 @@
 
 .mobilemenu {
   box-sizing: border-box;
-  display: none;
+  display: flex;
+  visibility: hidden;
   flex-direction: column;
   background-color: var(--modal-bg);
   color: var(--text-color);
-  width: 100%;
+  width: 100%;  
   position: absolute;
   top: 0;
   left: 0;
   min-height: 100vh;
   z-index: 2;
+  opacity: 0;
+  transition: visibility 0.6s, opacity 0.6s ease-in-out;
 }
 
 .mobilemenu__top {
@@ -98,7 +120,9 @@
 }
 
 .mobilemenu_state_opened {
-  display: flex;
+  transition: visibility 0.6s, opacity 0.6s ease-in-out;
+  visibility: visible;
+  opacity: 1;
 }
 
 .mobilemenu__list {
@@ -120,7 +144,7 @@
 }
 
 .submenu__item {
-  padding: 10px 0;
+  padding: 10px 0 10px 28px;
 }
 
 @media screen and (max-width: 1260px) {
@@ -149,6 +173,9 @@
   }
   .header__mobile {
     display: flex;
+  }
+  .menu__item {
+    padding: 12px 0 12px 12px;
   }
 }
 
