--- a/src/components/header-item/header-item.module.css
+++ b/src/components/header-item/header-item.module.css
@@ -1,6 +1,6 @@
-.menu__item_inactive {
+/*.menu__item_inactive {
   color: var(--secondary-text);
-}
+} */
 
 @media screen and (max-width: 790px) {
   .icon {
