--- a/src/components/ingredient-details/ingredient-details.module.css
+++ b/src/components/ingredient-details/ingredient-details.module.css
@@ -1,3 +1,16 @@
+
+.container {
+  display: flex;
+  width: 100%;
+  max-width: 400px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  box-sizing: border-box;
+  margin: 40px 0 0 0;
+}
+
 .text {
   text-align: center;
   width: 100%;
@@ -37,7 +50,7 @@
   display: flex;
   min-height: 64px;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   width: 100%;
   box-sizing: border-box;
 }
