--- a/src/components/order/order.module.css
+++ b/src/components/order/order.module.css
@@ -1,9 +1,6 @@
 
 .order {
     width: 100%;
-    min-height: 260px;
-    border-radius: 40px;
-    background-color: var(--modal-bg);
     font-family: 'JetBrains Mono', sans-serif;
     box-sizing: border-box;
   }
@@ -72,5 +69,17 @@
       width: 100%;
       align-items: center;
   }
-  
+
+  .link {
+    text-decoration: none;
+    display: flex;
+    width: 100%;
+    min-height: 260px;
+    border-radius: 40px;
+    background-color: var(--modal-bg);
+    box-sizing: border-box;
+    color: var(--secondary-text);
+    margin: 0 0 24px 0;
+
+  }
   
