--- a/src/components/order-details/order-details.module.css
+++ b/src/components/order-details/order-details.module.css
@@ -16,6 +16,40 @@
   width: 100%;
 }
 
+/* preloader */
+.preloaderContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  flex-direction: column;
+}
+
+.preloader {
+  display: inline-block;
+  width: 80px;
+  height: 80px;
+}
+.preloader:after {
+  content: ' ';
+  display: block;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border-radius: 50%;
+  border: 6px solid var(--text-color);
+  border-color: var(--text-color) transparent var(--text-color) transparent;
+  animation: dual-ring 1.2s linear infinite;
+}
+@keyframes dual-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 @media screen and (max-width: 480px) {
   .digits {
     font-size: 62px;
