--- a/src/components/order/order.module.css
+++ b/src/components/order/order.module.css
@@ -21,6 +21,8 @@
   .sum {
     color: var(--text-color);
   }
+
+  .statusWhite {color: var(--text-color);}
   .status {
       font-size: 16px;
       line-height: 24px;
@@ -84,3 +86,5 @@
 
   }
   
+
+  .statusBlue {color: var( --accent-order);}
