--- a/src/components/order/order.module.css
+++ b/src/components/order/order.module.css
@@ -1,90 +1,88 @@
-
 .order {
-    width: 100%;
-    font-family: 'JetBrains Mono', sans-serif;
-    box-sizing: border-box;
-  }
-  
-  .number {
-    color: var(--text-color);
-    width: 100%;
-    max-width: 100px;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  .name {
-    color: var(--text-color);
-  }
+  width: 100%;
+  font-family: 'JetBrains Mono', sans-serif;
+  box-sizing: border-box;
+}
 
-  .sum {
-    color: var(--text-color);
-  }
+.number {
+  color: var(--text-color);
+  width: 100%;
+  max-width: 100px;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-  .statusWhite {color: var(--text-color);}
-  .status {
-      font-size: 16px;
-      line-height: 24px;
-      padding: 0;
-  
-  }
-  
-  .ingredients {
-    min-height: 64px;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    position: relative;
-  }
-  
-  .list {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    width: 100%;
-    max-width: 450px;
-  }
+.name {
+  color: var(--text-color);
+}
 
-  
-  
-  .sumcontainer {
-    display: flex;
-    justify-content: flex-end;
-    width: 100%;
-    max-width: 100px;
-    align-items: center;
-  }
-  
-  .date {
-      font-size: 16px;
-      line-height: 24px;
-      color: var(--secondary-text);
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-  }
-  
-  .datecontainer{
-      display: flex;
-     justify-content: space-between;
-      width: 100%;
-      align-items: center;
-  }
+.sum {
+  color: var(--text-color);
+}
 
-  .link {
-    text-decoration: none;
-    display: flex;
-    width: 100%;
-    min-height: 260px;
-    border-radius: 40px;
-    background-color: var(--modal-bg);
-    box-sizing: border-box;
-    color: var(--secondary-text);
-    margin: 0 0 24px 0;
+.statusWhite {
+  color: var(--text-color);
+}
+.status {
+  font-size: 16px;
+  line-height: 24px;
+  padding: 0;
+}
 
-  }
-  
+.ingredients {
+  min-height: 64px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+}
 
-  .statusBlue {color: var( --accent-order);}
+.list {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  width: 100%;
+  max-width: 450px;
+}
+
+.sumcontainer {
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+  max-width: 100px;
+  align-items: center;
+}
+
+.date {
+  font-size: 16px;
+  line-height: 24px;
+  color: var(--secondary-text);
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.datecontainer {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  align-items: center;
+}
+
+.link {
+  text-decoration: none;
+  display: flex;
+  width: 100%;
+  min-height: 260px;
+  border-radius: 40px;
+  background-color: var(--modal-bg);
+  box-sizing: border-box;
+  color: var(--secondary-text);
+  margin: 0 0 24px 0;
+}
+
+.statusBlue {
+  color: var(--accent-order);
+}
