--- a/src/components/individul-order/individual-order.module.css
+++ b/src/components/individul-order/individual-order.module.css
@@ -1,168 +1,165 @@
 .container {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    align-items: center;
-    justify-content: center;
-    /*margin:0 0 50px 0;*/
-    margin: 0;
-  }
-  
-  .box {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    max-width: 620px;
-    min-height: 300px;
-    /*margin: 122px 0 0 0;*/
-    margin: 0;
-    font-family: 'JetBrains Mono', sans-serif;
-  }
-  
-  .number {
-    width: 100%;
-    text-align: center;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  .name {
-    width: 100%;
-    text-align: left;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  .status {
-    padding: 0;
-    margin: 0 0 60px 0;
-  }
-  
-  .status_performed {
-    color: var(--accent-order);
-  }
-  .title {
-    font-size: 24px;
-    line-height: 28px;
-    padding: 0;
-    /*margin: 0 0 24px 0;*/
-    margin: 0 0 8px 0;
-  }
-  
-  .image {
-    width:64px;
-    height: 64px;
-    object-fit: cover;
-    margin: 0 16px 0 0;
-  }
-  .list {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    list-style-type: none;
-    align-items: center;
-    margin: 0;
-    padding: 0;
-    height: auto;
-    max-height: 240px;
-    overflow-x: hidden;
-    overflow-y: auto;
-    box-sizing: border-box;
-  }
-  
-  
-  .list::-webkit-scrollbar {
-    width: 10px;
-  }
-  
-  .list::-webkit-scrollbar-track {
-    background-color: #2f2f37;
-    width: 8px;
-  }
-  
-  .list::-webkit-scrollbar-thumb {
-    background-color: #8585ad;
-    outline: 0;
-  }
-  
-  
-  .list__item {
-    display: flex;
-    width: 100%;
-    justify-content: space-between;  
-    align-items: center !important;
-  }
-  
-  .list__item2 {
-    padding: 2px;
-    margin: 0 16px 0 0;
-    box-sizing: border-box;
-    /*border: 2px solid var(--accent);*/
-    background-image: linear-gradient(to right top, #801AB2, #4C4CFF);
-    background-size: 60px 60px;
-    border-radius: 50%;
-    background-color: var(--modal-bg);
-    overflow:hidden;
-  }
-  
-  .list__iteminfo {
-    display: flex;
-    width: 100%;
-    justify-content: flex-start;
-    align-items: center !important;
-  }
-  
-  .list__priceinfo {
-    display: flex;
-    width: 100%;
-    max-width: 200px;
-    justify-content: flex-end;
-    align-items: center;
-    padding: 0 24px 0 0;
-  }
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  /*margin:0 0 50px 0;*/
+  margin: 0;
+}
 
-  .list__priceinfototal {
-    display: flex;
-    width: 100%;
-    max-width: 200px;
-    justify-content: flex-end;
-    align-items: center;
-  }
-  
-  .price {
-    font-size: 28px;
-    line-height: 24px;
-    margin: 0 8px 0 0;
-    padding: 0;
-  }
-  
-  
-  .footer {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    margin: 40px 0 0 0;
-  }
-  
-  .date {
-    font-size: 16px;
-    line-height: 24px;
-    color: var(--secondary-text);
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  
-  .list__image {
-    width: 54px;
-    height: 54px;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-    margin: 0;
-    padding: 4px;
-    box-sizing: border-box;
-    background-color: var(--modal-bg);
-    border-radius: 50%;
-  }
+.box {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  max-width: 620px;
+  min-height: 300px;
+  /*margin: 122px 0 0 0;*/
+  margin: 0;
+  font-family: 'JetBrains Mono', sans-serif;
+}
+
+.number {
+  width: 100%;
+  text-align: center;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.name {
+  width: 100%;
+  text-align: left;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.status {
+  padding: 0;
+  margin: 0 0 60px 0;
+}
+
+.status_performed {
+  color: var(--accent-order);
+}
+.title {
+  font-size: 24px;
+  line-height: 28px;
+  padding: 0;
+  /*margin: 0 0 24px 0;*/
+  margin: 0 0 8px 0;
+}
+
+.image {
+  width: 64px;
+  height: 64px;
+  object-fit: cover;
+  margin: 0 16px 0 0;
+}
+
+.list {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  list-style-type: none;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+  height: auto;
+  max-height: 240px;
+  overflow-x: hidden;
+  overflow-y: auto;
+  box-sizing: border-box;
+}
+
+.list::-webkit-scrollbar {
+  width: 10px;
+}
+
+.list::-webkit-scrollbar-track {
+  background-color: #2f2f37;
+  width: 8px;
+}
+
+.list::-webkit-scrollbar-thumb {
+  background-color: #8585ad;
+  outline: 0;
+}
+
+.list__item {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center !important;
+}
+
+.list__item2 {
+  padding: 2px;
+  margin: 0 16px 0 0;
+  box-sizing: border-box;
+  /*border: 2px solid var(--accent);*/
+  background-image: linear-gradient(to right top, #801ab2, #4c4cff);
+  background-size: 60px 60px;
+  border-radius: 50%;
+  background-color: var(--modal-bg);
+  overflow: hidden;
+}
+
+.list__iteminfo {
+  display: flex;
+  width: 100%;
+  justify-content: flex-start;
+  align-items: center !important;
+}
+
+.list__priceinfo {
+  display: flex;
+  width: 100%;
+  max-width: 200px;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 0 24px 0 0;
+}
+
+.list__priceinfototal {
+  display: flex;
+  width: 100%;
+  max-width: 200px;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.price {
+  font-size: 28px;
+  line-height: 24px;
+  margin: 0 8px 0 0;
+  padding: 0;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  margin: 40px 0 0 0;
+}
+
+.date {
+  font-size: 16px;
+  line-height: 24px;
+  color: var(--secondary-text);
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.list__image {
+  width: 54px;
+  height: 54px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  margin: 0;
+  padding: 4px;
+  box-sizing: border-box;
+  background-color: var(--modal-bg);
+  border-radius: 50%;
+}
