--- a/src/components/personal-menu/personal-menu.module.css
+++ b/src/components/personal-menu/personal-menu.module.css
@@ -1,74 +1,70 @@
 .navigation {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    max-width: 320px;
-    margin: 120px 0 0 0;
-    position: absolute;
-    top: 0;
-    left: 0;
-
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 320px;
+  margin: 120px 0 0 0;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 .menu {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
 
 .menu__item:hover {
-    color: var(--text-color);
-    transition: color .3s ease-in;
+  color: var(--text-color);
+  transition: color 0.3s ease-in;
 }
 
-
 .menu__item {
-    font-size: 24px;
-    line-height: 30px;
-    padding: 24px 0;
-    font-family: 'JetBrains Mono', sans-serif;
-    color: var(--secondary-text);
-    font-weight: 700;
-    text-decoration: none;
-    background-color: transparent;
-    border: 0;
-    text-align: left;
-    cursor: pointer;
+  font-size: 24px;
+  line-height: 30px;
+  padding: 24px 0;
+  font-family: 'JetBrains Mono', sans-serif;
+  color: var(--secondary-text);
+  font-weight: 700;
+  text-decoration: none;
+  background-color: transparent;
+  border: 0;
+  text-align: left;
+  cursor: pointer;
 }
 
 .menu__item_active {
-    color: var(--text-color);
+  color: var(--text-color);
 }
 
 .par {
-    font-family: 'JetBrains Mono', sans-serif;
-    color: var(--secondary-text);
-    font-size: 16px;
-    line-height: 24px;
-    font-weight: 400;
-
+  font-family: 'JetBrains Mono', sans-serif;
+  color: var(--secondary-text);
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
 }
 @media screen and (max-width: 1240px) {
-.navigation {
+  .navigation {
     max-width: 300px;
-}
-}
-
-@media screen and (max-width: 1150px ){
-    .navigation {
-        max-width: 250px;
-    }
+  }
 }
 
-@media screen and (max-width:960px ){
-    .navigation {
-        position: static;
-        margin: 24px 0 0 24px;
-    }
+@media screen and (max-width: 1150px) {
+  .navigation {
+    max-width: 250px;
+  }
+}
+
+@media screen and (max-width: 960px) {
+  .navigation {
+    position: static;
+    margin: 24px 0 0 24px;
+  }
 }
 
 @media screen and (max-width: 790px) {
-    .navigation {
-        display: none;
-    }
+  .navigation {
+    display: none;
+  }
 }
