--- a/src/components/single-order-ingredients/single-order-ingredients.module.css
+++ b/src/components/single-order-ingredients/single-order-ingredients.module.css
@@ -1,64 +1,62 @@
-
 .list__item {
-    padding: 2px;
-    margin: 0;
-    box-sizing: border-box;
-    /*border: 2px solid var(--accent);*/
-    background-image: linear-gradient(to right top, #801AB2, #4C4CFF);
-    background-size: 60px 60px;
-    border-radius: 50%;
-    transform: translate(0);
-    position: absolute;
-    top: 0;
-    background-color: var(--modal-bg);
-    overflow:hidden;
-  }
-  
-  .list__image {
-    width: 54px;
-    height: 54px;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-    margin: 0;
-    padding: 4px;
-    box-sizing: border-box;
-    background-color: var(--modal-bg);
-    border-radius: 50%;
-  }
-  .list__image_more {
-    /*opacity: 0.2;  */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .list__item_more::before {
-      content: "";
-      position: absolute;
-      top: 0px;
-      right: 0px;
-      bottom: 0px;
-      left: 0px;
-      background-color: rgba(19,19,22,0.5);
-      width: 100%;
-      box-sizing: border-box;
-      padding: 0;
-      border-radius: 50%;
-  }
+  padding: 2px;
+  margin: 0;
+  box-sizing: border-box;
+  /*border: 2px solid var(--accent);*/
+  background-image: linear-gradient(to right top, #801ab2, #4c4cff);
+  background-size: 60px 60px;
+  border-radius: 50%;
+  transform: translate(0);
+  position: absolute;
+  top: 0;
+  background-color: var(--modal-bg);
+  overflow: hidden;
+}
 
-  .par {
-    color: white;
-    padding: 0;
-    margin: 0;
-    font-size: 16px;
-    font-family: 'JetBrains Mono', sans-serif;
-    position: relative;
-    z-index: 90;
-   /* position: absolute;
+.list__image {
+  width: 54px;
+  height: 54px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  margin: 0;
+  padding: 4px;
+  box-sizing: border-box;
+  background-color: var(--modal-bg);
+  border-radius: 50%;
+}
+.list__image_more {
+  /*opacity: 0.2;  */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.list__item_more::before {
+  content: '';
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  background-color: rgba(19, 19, 22, 0.5);
+  width: 100%;
+  box-sizing: border-box;
+  padding: 0;
+  border-radius: 50%;
+}
+
+.par {
+  color: white;
+  padding: 0;
+  margin: 0;
+  font-size: 16px;
+  font-family: 'JetBrains Mono', sans-serif;
+  position: relative;
+  z-index: 90;
+  /* position: absolute;
     top: 35%;
     left: 35%;
     opacity: 1;*/
-  }
-  
+}
